Implement notepad-like style feature

--- a/org/gjt/sp/jedit/jedit.props
+++ b/org/gjt/sp/jedit/jedit.props
@@ -259,6 +259,9 @@ view.eolMarkerChar=↩
 view.wrapGuide=true
 view.wrapGuideColor=#8080ff
 
+# Notepad appearance enabling
+view.enableNotepadAppearance=false
+
 # page breaks
 view.pageBreaks=false
 view.pageBreaksColor=#8080ff
