--- a/org/jedit/localization/jedit_en.props
+++ b/org/jedit/localization/jedit_en.props
@@ -1859,6 +1859,7 @@ options.textarea.stripTrailingEOL=Hide final end of line (if any)
 options.textarea.completeFromAllBuffers=Complete words from all open buffers (default is \
     to limit search to currently visible buffers)
 options.textarea.insertCompletionWithDigit=Complete word by typing corresponding digit (otherwise, digit is considered part of the word)
+options.textarea.enableNotepadAppearance=Enable "Notepad"-like style appearance
 options.textarea.lineSpacing.label=Extra vertical line spacing (in pixels):
 #}}}
 
